# discord-bot

./: .gitignore  Cargo.nix  Cargo.toml  flake.nix
.github/workflows/: build-flake.yml
src/: main.rs
